@Vaildated,@NotBlank - 공백일 경우 메시지출력

--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -155,7 +155,7 @@
                     error: (errorResponse) => {
                         console.log(errorResponse);
                         usernameInput.classList.remove("success");
-                        usernameError.textContent = errorResponse.responseJSON.data.duplicate;
+                        usernameError.textContent = errorResponse.responseJSON.data.username;
                     }
                 });
             }
