--- a/src/main/resources/templates/account/functionTest.html
+++ b/src/main/resources/templates/account/functionTest.html
@@ -6,14 +6,16 @@
 </head>
 <body>
   <script>
-    cont test = function () {
-      alert("테스트 호출!!");
-    };
+    const user = {
+        username: "test",
+        password: "1234",
+        name: "김혜진"
+    }
 
-    cont test = () => {
-      alert("테스트 호출!!");
-    };
-
+    Object.keys(user).forEach(key => {
+        console.log(key);
+        console.log(user[key]);
+    });
 
   </script>
 </body>
