--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -122,6 +122,7 @@
             }
 
             registrationUser(user) {
+                const errorMsgs = document.querySelectorAll(".error-msg");
                 $.ajax({
                     async: false,
                     type: "post",
@@ -131,9 +132,28 @@
                     dataType: "json",
                     success: (response) => {
                         console.log(response);
+                        errorMsgs.forEach(errorMsg => {
+                            errorMsg.textContent = "";
+                        });
                     },
                     error: (errorResponse) => {
                         console.log(errorResponse);
+                        const errorMap = errorResponse.responseJSON.data;
+
+                        errorMsgs.forEach(errorMsg => {
+                            errorMsg.textContent = "";
+                        });
+                        Object.keys(errorMap).forEach(key => {
+                            if(key == "username") {
+                                errorMsgs[0].textContent = errorMap[key];
+                            }else if(key == "password") {
+                                errorMsgs[1].textContent = errorMap[key];
+                            }else if(key == "name") {
+                                errorMsgs[2].textContent = errorMap[key];
+                            }else if(key == "email") {
+                                errorMsgs[3].textContent = errorMap[key];
+                            }
+                        });
                     }
                 });
             }
@@ -155,7 +175,7 @@
                     error: (errorResponse) => {
                         console.log(errorResponse);
                         usernameInput.classList.remove("success");
-                        usernameError.innerHTML = errorResponse.responseJSON.data.username;
+                        usernameError.textContent = errorResponse.responseJSON.data.username;
                     }
                 });
             }
